language-server/src/tests/snapshots/gleam_language_server__tests__signature_help__help_for_use_function_call_starts_from_first_argument.snap
---
source: language-server/src/tests/signature_help.rs
expression: "\npub fn wibble(a: Int, b: Int, c: fn() -> Int) { 1.0 }\n\npub fn main() {\n    use <- wibble()\n}\n    "
---

pub fn wibble(a: Int, b: Int, c: fn() -> Int) { 1.0 }

pub fn main() {
    use <- wibble()
                  ↑
}
    


----- Signature help -----
wibble(Int, Int, fn() -> Int) -> Float
       ▔▔▔

No documentation
