language-server/src/tests/snapshots/gleam_language_server__tests__signature_help__help_for_use_function_call_uses_concrete_types_when_late_ubound.snap
---
source: language-server/src/tests/signature_help.rs
expression: "\nfn identity(x: a) -> a { x }\n\nfn main() {\n  let a = Ok(10)\n  identity( a)\n}\n"
---

fn identity(x: a) -> a { x }

fn main() {
  let a = Ok(10)
  identity( a)
           ↑  
}


----- Signature help -----
identity(Result(Int, b)) -> Result(Int, b)

No documentation
