language-server/src/tests/snapshots/gleam_language_server__tests__signature_help__help_for_use_function_call_uses_concrete_types_when_possible_or_generic_names_when_unbound.snap
---
source: language-server/src/tests/signature_help.rs
expression: "\npub fn wibble(x: something, y: fn() -> something, z: anything) { Nil }\npub fn main() {\n    wibble(1, )\n}\n"
---

pub fn wibble(x: something, y: fn() -> something, z: anything) { Nil }
pub fn main() {
    wibble(1, )
              ↑
}


----- Signature help -----
wibble(Int, fn() -> Int, anything) -> Nil
            ▔▔▔▔▔▔▔▔▔▔▔

No documentation
