language-server/src/tests/snapshots/gleam_language_server__tests__signature_help__help_for_use_function_call_uses_generic_names_when_missing_all_arguments.snap
---
source: language-server/src/tests/signature_help.rs
expression: "\npub fn wibble(x: something, y: fn() -> something, z: anything) { Nil }\npub fn main() {\n    wibble( )\n}\n"
---

pub fn wibble(x: something, y: fn() -> something, z: anything) { Nil }
pub fn main() {
    wibble( )
           ↑ 
}


----- Signature help -----
wibble(something, fn() -> something, anything) -> Nil
       ▔▔▔▔▔▔▔▔▔

No documentation
