language-server/src/tests/snapshots/gleam_language_server__tests__signature_help__help_shows_documentation_for_imported_function.snap
---
source: language-server/src/tests/signature_help.rs
expression: "\nimport example\npub fn main() {\n  example.example_fn()\n}\n"
---

import example
pub fn main() {
  example.example_fn()
                     ↑
}


----- Signature help -----
example.example_fn(Int, String) -> Nil
                   ▔▔▔

Documentation:
MarkupContent(
    MarkupContent {
        kind: Markdown,
        value: " Some doc!\n",
    },
)
