language-server/src/tests/snapshots/gleam_language_server__tests__signature_help__help_shows_labels.snap
---
source: language-server/src/tests/signature_help.rs
expression: "\npub fn wibble(a: Int, b b: Int, c c: String) { 1.0 }\n\npub fn main() {\n    wibble()\n}\n    "
---

pub fn wibble(a: Int, b b: Int, c c: String) { 1.0 }

pub fn main() {
    wibble()
           ↑
}
    


----- Signature help -----
wibble(Int, b: Int, c: String) -> Float
       ▔▔▔

No documentation
