language-server/src/tests/snapshots/gleam_language_server__tests__signature_help__help_still_shows_up_even_if_an_argument_has_the_wrong_type.snap
---
source: language-server/src/tests/signature_help.rs
expression: "\npub fn wibble(a: Int, b: String) { 1.0 }\n\npub fn main() {\n  wibble(\"wrong\",)\n}\n"
---

pub fn wibble(a: Int, b: String) { 1.0 }

pub fn main() {
  wibble("wrong",)
                 ↑
}


----- Signature help -----
wibble(Int, String) -> Float
            ▔▔▔▔▔▔

No documentation
